# sheet-optimizer-pro

./: AI_CONTEXT.md  AI_IMPLEMENTATION_GUIDE.md  CLAUDE.md  CONTEXT_MAP.md  PROJETO_COMPLETO.md  agrupamento_sobras_plano_corte.md  analise  bug rotacao.xlsx  index.html  package-lock.json  package.json  regra_de_correcao_de_nodes_plano_de_corte.md  skills-lock.json  test_output.txt  test_output_utf8.txt  vite.config.ts  vite.config.ts.timestamp-1776241145048-85dbaf69874fd.mjs  vite.config.ts.timestamp-1777241846296-ab6b221f0c763.mjs  vite.config.ts.timestamp-1777247710608-99e265db0bbee.mjs  vite.config.ts.timestamp-1777326953293-1d00446f5fb12.mjs  vitest.config.ts.timestamp-1777276363600-b0d4be2d3c008.mjs
.claudecode/: CLAUDE.md  generate_context_summary.py
.lovable/: plan.md
docs/: ALGORITHM_IMPROVEMENTS.md  agrupamento_sobras_plano_corte.md
docs/bugs/: aproveitamento.md  bug_arvore.md  bug_dimensoes.md  bug_identificacao.md
parts/: test_quanty_parts.xlsx
pecas_teste/: Teste 11 pecas.xlsx
src/: index.css
src/components/: SheetViewer.tsx  SidebarSection.tsx
src/lib/: cnc-engine.ts  excel-export.ts  pdf-export.ts
src/pages/: Index.tsx
src/test/: debug-test.test.ts  node-normalization.test.ts  (+9 more)
wasm-engine/: Cargo.toml
wasm-engine/.cargo/: config.toml
wasm-engine/pkg/: optimizer_wasm.d.ts  optimizer_wasm.js  optimizer_wasm_bg.wasm  optimizer_wasm_bg.wasm.d.ts  package.json
wasm-engine/src/: genetic.rs  grouping.rs  lib.rs  normalization.rs  optimizer.rs  placement.rs  post_processing.rs  scoring.rs  tree_utils.rs  types.rs  void_filling.rs
(+31 files in other folders)
